--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "tree-sitter-flatbuffers"
 description = "FlatBuffers grammar for the tree-sitter parsing library"
 version = "0.0.1"
-keywords = ["incremental", "parsing", "FlatBuffers"]
+keywords = ["incremental", "parsing", "flatbuffers"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/tree-sitter/tree-sitter-flatbuffers"
+repository = "https://github.com/smpanaro/tree-sitter-flatbuffers"
 edition = "2018"
 license = "MIT"
 
