--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
   "tree-sitter": [
     {
       "scope": "source.flatbuffers",
-      "injection-regex": "^flatbuffers$"
+      "file-types": [
+        "fbs"
+      ],
+      "injection-regex": "^flatbuffers$",
+      "highlights": "queries/highlights.scm"
     }
   ]
 }
