--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tree-sitter-flatbuffers"
-description = "Flatbuffers grammar for tree-sitter"
+description = "FlatBuffers grammar for tree-sitter"
 version = "0.0.1"
 keywords = ["incremental", "parsing", "tree-sitter", "flatbuffers"]
 classifiers = [
@@ -19,7 +19,7 @@ license.text = "MIT"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/tree-sitter/tree-sitter-flatbuffers"
+Homepage = "https://github.com/smpanaro/tree-sitter-flatbuffers"
 
 [project.optional-dependencies]
 core = ["tree-sitter~=0.22"]
